tests/syntax/trailing_dot_method_bad_indent.ca.output
[tests/syntax/trailing_dot_method_bad_indent.ca:10] 
 [inside error_up()] 
  Error: Syntax error: Unrecognized start of expression (next token = '.')
